modification to css

--- a/styles.css
+++ b/styles.css
@@ -154,3 +154,13 @@ h5{
   color: white;
   margin-top: 150px;
 }
+
+/* Lisa's changes */
+.imgother {
+    width: 30%;
+    margin: 15px;
+}
+
+td {
+    padding-left: 15px;
+}
