--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,13 @@ body {
   width: 100px;
   object-fit: scale-down;
 }
+
+.drImage {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  padding: 10px;
+}
 /* Landscape phones and down */
 @media (max-width: 480px) {
   #photoSection{
@@ -63,6 +70,13 @@ body {
   .newPatientImage{
     height: 100%;
     width: 100%;
+  }
+  .drImage {
+    width: 70%;
+    height: 50%;
+    object-fit: contain;
+    margin-left: 70px;
+    padding: 10px;
   }
 }
 
@@ -123,9 +137,7 @@ a:hover {
     width: 90%;
     text-align: center;
     margin: 10px;
-    background-color: #153450;
     border: 2px solid ;
-    box-shadow:
 }
 
 .infoButton:hover{
@@ -134,7 +146,6 @@ a:hover {
     width: 90%;
     text-align: center;
     margin: 10px;
-    background-color: #153450;
     border: 2px solid #FEF6EB ;
     box-shadow: 0 5px 16px 0 black;
 }
@@ -161,7 +172,7 @@ a:hover {
 }
 
 .lightBlue {
-  background-color: #96c0cE;
+  background-color: #3399cc;
 }
 
 .grey {
@@ -202,14 +213,6 @@ a:hover {
   backface-visibility: hidden;
   object-fit: contain;
   margin: 10px;
-}
-
-.drImage {
-  width: 70%;
-  height: 50%;
-  object-fit: contain;
-  margin-left: 50px;
-  padding: 10px;
 }
 
 .staffMiddle {
