--- a/css/styles.css
+++ b/css/styles.css
@@ -49,11 +49,11 @@ body {
   object-fit: scale-down;
 }
 
+.drWriteUp{
+  height: 400px;
+}
+
 .drImage {
-  width: 100%;
-  height: 100%;
-  object-fit: fill;
-  padding: 10px;
 }
 /* Landscape phones and down */
 @media (max-width: 480px) {
@@ -85,11 +85,35 @@ body {
   height: 200px;
 }
 
-#jumbotronPhoto {
+.mainPhoto {
   height: 100%;
   width: 100%;
   object-fit: contain;
-  padding: 15px;
+}
+
+.photoDiv{
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.photoContainer{
+  padding-top: 50px;
+  height: 100%;
+}
+
+#WDALogo{
+  height: 100px;
+  width: 150px;
+  object-fit: contain;
+  margin-left: 15px;
+}
+
+#ADALogo{
+  height: 100px;
+  width: 150px;
+  object-fit: scale-down;
+  margin-left: 15px;
+  padding-right: 60px;
 }
 
 #retirementPhoto {
